2020-02-27  Jose E. Marchesi  <jemarch@gnu.org>

	* TODO: Update.

2020-02-26  Eric Blake  <eblake@redhat.com>

	open: Normalize tricky .file names.
	* src/ios-dev.h (struct ios_dev_if): Replace handler_p with
	handler_noramlize callback.
	* src/ios.c (ios_open): Store normalized name per ios.
	* src/ios-dev-file.c (ios_dev_file_handler_p): Rename...
	(ios_dev_file_handler_normalize): ...and prepend ./ to risky
	relative file names.
	* src/ios-dev-mem.c (ios_dev_mem_handler_p): Rename...
	(ios_dev_mem_handler_normalize): ...to this.
	(ios_dev_mem_open, ios_dev_mem_close): Drop unused handler member.
	* testsuite/poke.cmd/file-relative.pk: New test.

2020-02-26  Eric Blake  <eblake@redhat.com>

	* src/ios.c (ios_close): Avoid side-effect inside assert.
	* src/pk-def.c (print_var_decl, print_fun_decl): Likewise.
	* src/pk-term.c (pk_printf): Likewise.
	* src/pkl-asm.c (pkl_asm_call): Likewise.
	* src/pkl-tab.y (pkl_register_dummies): Likewise.
	* src/pkl.c (pkl_detailed_location): Likewise.

2020-02-26  Eric Blake  <eblake@redhat.com>

	* etc/git.orderfile (ChangeLog): Always list first.
	(Documentation): Correct spelling of doc/.
	(Build files): build-aux is not stored in git.

2020-02-25  Eric Blake  <eblake@redhat.com>

	* .gitignore: Ignore more testsuite leftovers.

2020-02-25  Eric Blake  <eblake@redhat.com>

	* src/pkl-tab.y (opt_comma): New rule.
	(array): Use it to simplify trailing comma in arrays.
	(struct, expression): Allow trailing comma in struct literals.
	* doc/poke.texi (Struct Literals): Document it.
	* testsuite/poke.pkl/structs-5.pk: Test it.
	* etc/poke.g4 (array, struct): Match the real grammar.

2020-02-25  Eric Blake  <eblake@redhat.com>

	maint: Fix syntax-check
	* .x-sc_prohibit_strncpy: Exempt pk-repl.c.
	* etc/poke.g4 (expression): Whitespace cleanups.
	* doc/poke.texi (String Concatenation): Likewise.
	* src/ios-dev-file.c (ios_dev_file_close): Likewise.
	* src/ios-dev-mem.c (ios_dev_mem_getc): Likewise.
	* src/ios.c: Likewise.